feat: ajuste na rota
