# routes/api.php
@@ -35,6 +35,9 @@ Route::prefix('v1')->group(function () {
 
     Route::get('/public/plans', [PublicPlanController::class, 'index']);
 
+    Route::post('/public/companies/register', [CompanyRegistrationController::class, 'store'])
+        ->middleware(['throttle:public-company-registration']);
+
     Route::post('/invites/accept', [InviteController::class, 'accept']);
     Route::post('/auth/login', [AuthController::class, 'login']);
 
